# SessileTestingDA

./: .buildinfo  Crop.csv  EdgeFinder.py  EdgeFinderFunctions.py  Installation.html  LICENSE  README.md  edgefinder.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.md  test.py
.github/workflows/: run-tests.yml  sphinx_auto_doc.yml  test-coverage.yml
Examples/: Example.py  Example_Multiple_Images.py  Example_Single_Image.py
TestFolder/: asdf.txt
_sources/: Installation.rst.txt  edgefinder.rst.txt
docs/: Installation.rst  conf.py  edgefinder.rst  index.rst
docs/source/: conf.py  index.rst
src/edgeFinder/: edgeFinder.py  edgefinder.py
src/edgefinder/: _version.py  edgefinder.py
test/: test_edgeFinder.py  test_edgefinder.py
